# Plugin_boutique_price_checker

./: .dockerignore  .env  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  cloudbuild.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy-gcp.yml  release.yml
alembic/: env.py
alembic/versions/: 20260212_0001_initial_schema.py
chrome_extension/: PRIVACY_POLICY.md  README.md  background.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
deploy/gcp/: bootstrap_gcp.sh  create_secrets.sh  create_worker_scheduler.sh  deploy_via_cloud_build.sh
docs/: beginners_guide.md  chrome_extension_production_checklist.md  chrome_extension_scaffold_guide.md  chrome_extension_screenshot_checklist.md  chrome_web_store_listing_copy.md  deployable_scaffold_guide.md  full_change_audit_and_state_recovery.md  gcp_cost_estimate.md  gcp_production_runbook.md  mobile_scaffold_guide.md  plist_troubleshooting.md
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
mobile_app/: .env.example  .gitignore  App.tsx  README.md  app.json  package.json
mobile_app/src/api/: client.ts
mobile_app/src/auth/: session.ts
mobile_app/src/config/: index.ts
mobile_app/src/types/: api.ts
plist_creator/: README.md  create_plist.py
scripts/: migrate.sh  package_chrome_extension.sh  run_api_prod.sh  run_worker_once.sh
snapshots/: README.md  SHA256SUMS.txt
src/amazon_scraper/: __main__.py  cli.py  email_notifier.py  models.py  price_alert_service.py  selenium_scraper.py
src/plugin_boutique_price_checker/: __init__.py  __main__.py
src/plugin_boutique_price_checker/web/: __init__.py  api.py  auth.py  database.py  deps.py  orm_models.py  schemas.py  scrape_runner.py  server.py  settings.py  worker.py
src/plugin_boutique_price_checker/web/static/: app.js  index.html  styles.css
tests/: conftest.py  test_api_auth_integration.py  test_auth_sms.py  test_cli.py  test_email_notifier.py  test_main_module.py  test_models.py  test_price_alert_service.py  test_selenium_scraper.py
