[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-scraper"
version = "0.1.0"
description = "Plugin Boutique price tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "selenium>=4.28.1",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
plugin-boutique-alert = "amazon_scraper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
