[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-boutique-price-checker"
version = "0.1.0"
description = "Plugin Boutique price tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.10",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.43",
    "python-dotenv>=1.0.1",
    "selenium>=4.28.1",
    "uvicorn>=0.35.0",
    "webdriver-manager>=4.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
plugin-boutique-alert = "plugin_boutique_price_checker.cli:main"
plugin-boutique-api = "plugin_boutique_price_checker.web.server:main"
plugin-boutique-worker = "plugin_boutique_price_checker.web.worker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
